--- a/package.json
+++ b/package.json
@@ -3,13 +3,34 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@emotion/react": "^11.8.1",
+    "@emotion/styled": "^11.8.1",
+    "@material-ui/core": "^4.12.3",
+    "@material-ui/icons": "^4.11.2",
+    "@mui/icons-material": "^5.4.4",
+    "@mui/lab": "^5.0.0-alpha.72",
+    "@mui/material": "^5.4.4",
+    "@mui/styled-engine": "^5.4.4",
+    "@mui/x-data-grid": "^5.5.1",
+    "@mui/x-data-grid-generator": "^5.5.1",
     "@testing-library/jest-dom": "^5.16.2",
     "@testing-library/react": "^12.1.3",
     "@testing-library/user-event": "^13.5.0",
+    "axios": "^0.26.0",
+    "formik": "^2.2.9",
+    "moment": "^2.29.1",
+    "moment-timezone": "^0.5.34",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-redux": "^7.2.6",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "5.0.0",
-    "web-vitals": "^2.1.4"
+    "recharts": "^2.1.9",
+    "redux": "^4.1.2",
+    "redux-thunk": "^2.4.1",
+    "sweetalert2": "^11.4.4",
+    "web-vitals": "^2.1.4",
+    "yup": "^0.32.11"
   },
   "scripts": {
     "start": "react-scripts start",
